force-app/main/default/objects/AWS_S3_Setting__mdt/AWS_S3_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Stores environment-specific AWS S3 configuration settings, including access credentials, bucket names, regions, and path details, used to generate presigned URLs for secure client-side file uploads.</description>
    <label>AWS S3 Setting</label>
    <pluralLabel>AWS S3 Settings</pluralLabel>
</CustomObject>