force-app/main/default/objects/AWS_S3_Setting__mdt/fields/Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Access_Key__c</fullName>
    <description>The AWS access key ID used to authenticate requests and sign presigned URLs. This is part of the credential pair associated with an IAM user or role.</description>
    <inlineHelpText>The AWS access key ID used to authenticate requests and sign presigned URLs. This is part of the credential pair associated with an IAM user or role.</inlineHelpText>
    <label>Access Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>