force-app/main/default/objects/AWS_S3_Setting__mdt/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <description>The name of the AWS S3 bucket where files will be uploaded or accessed. This must match the bucket configured in your AWS account.</description>
    <inlineHelpText>The name of the AWS S3 bucket where files will be uploaded or accessed. This must match the bucket configured in your AWS account.</inlineHelpText>
    <label>Bucket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>