force-app/main/default/objects/AWS_S3_Setting__mdt/fields/File_Size_Limit_Mb__c.field-meta.xml
<CustomField>
    <fullName>File_Size_Limit_Mb__c</fullName>
    <description>System wide max file size upload allowed. (megabytes)</description>
    <inlineHelpText>System wide max file size upload allowed. (megabytes)</inlineHelpText>
    <label>File Size Limit Mb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>