force-app/main/default/objects/AWS_S3_Setting__mdt/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production</label>
    <type>Checkbox</type>
</CustomField>