force-app/main/default/objects/AWS_S3_Setting__mdt/fields/Secret_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Access_Key__c</fullName>
    <description>The AWS secret access key paired with the access key ID. This value is used to securely sign presigned URLs and must be kept confidential.</description>
    <inlineHelpText>The AWS secret access key paired with the access key ID. This value is used to securely sign presigned URLs and must be kept confidential.</inlineHelpText>
    <label>Secret Access Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>